@@ -3,6 +3,7 @@ This this the changelog file for the Pothos C++ library.
 Release 0.4.2 (pending)
 ==========================
 
+- Added missing ProxyEnvironment calls to managed registry
 - Added missing BufferChunk calls to managed registry
 - RemoteServer should wait() on process after terminate
 - Added missing Block::isActive to managed registry
